<resources>
    <string name="app_name">Story App</string>
    <string name="format_email_tidak_valid">Format Email tidak valid</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="masukan_password_anda">Masukan password Anda</string>
    <string name="password_kurang_dari_8_karakter">Password kurang dari 8 karakter</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="register">Register</string>
    <string name="story">Story</string>
    <string name="foto">Foto</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="new_story">New Story</string>
    <string name="item_photo">Item Photo</string>
    <string name="image_login">image login</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="detail_story">Detail Story</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="token_kosong">Token Kosong</string>
    <string name="photo_berhasil_di_upload">Photo Berhasil di upload</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="switch_kamera">Switch Kamera</string>
    <string name="gagal_memunculkan_kamera">Gagal memunculkan kamera.</string>
    <string name="gagal_mengambil_gambar">Gagal mengambil gambar.</string>
    <string name="no_media_selected">No media selected</string>
    <string name="retry">Coba Lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="memuat_beberapa_lokasi">Memuat Beberapa Lokasi</string>
    <string name="gagal_memuat_lokasi">Gagal Memuat Lokasi</string>
    <string name="berhasil_memuat_lokasi">Berhasil Memuat Lokasi</string>
</resources>